*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9061 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -32,11 +32,13 @@ foxtrick.MoveLinks.desc=Ajoute le drapeau et la division de l'auteur du message 
 foxtrick.AttVsDef.desc=Ajoute les comparaisons attaque/défense dans le compte-rendu des matchs.
 foxtrick.AttVsDef.oldstyle.desc=ancien style
 foxtrick.AttVsDef.newstyle.desc=nouveau style
+foxtrick.AttVsDef.oldstyleifkseparated.desc=ancien style (coups francs indirect à part)
 #Ratings
 foxtrick.Ratings.desc=Ajoute les évaluations à la page des matchs.
 foxtrick.Ratings.HideAverages.desc=Masquer les notes moyennes
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (détaillée)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats pour chaque secteur
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
 foxtrick.Ratings.VnukStats.desc=VnukStats
@@ -72,8 +74,11 @@ foxtrick.ForumYouthIcons.youth_match.desc=Lien vers un match junior
 foxtrick.ForumYouthIcons.youth_series.desc=Lien vers une ligue junior
 foxtrick.ForumYouthIcons.enlarge_input.desc=Agrandit la zone de saisie.
 foxtrick.ForumYouthIcons.pre.desc=Lien vers une balise de texte pré-formatté ('pre').
+foxtrick.ForumYouthIcons.symbols.desc=Ajout des icône de symboles ci-dessous. Les symboles sont séparées par des points-virgules. Pour utiliser un point-virgule entrez "/;".
 foxtrick.ForumYouthIcons.debug.desc=Ajout d'un icône pour le journal de débogage de FoxTrick
 foxtrick.ForumYouthIcons.settings.desc=Ajout d'un icône pour les paramètres de FoxTrick
+foxtrick.ForumYouthIcons.tournament.desc=Ajout de l'icône TournamentID
+foxtrick.ForumYouthIcons.tournament_match.desc=Ajout de l'icône TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Remplace les balises HT-ML FoxTrick par des balises HTML (cf\: élément 'pre').
 #EmbedMedia
@@ -529,8 +534,10 @@ matchOrder.noMatchSelected=Pas de match sélectionné
 matchOrder.comparedTo=Comparer à\:
 matchOrder.previousPrediction=Prévision précédente
 matchOrder.AddMatchManually=Ajouter un match manuellement
+matchOrder.swapPositions=Inversez les positions
 matchOrder.options=Options
 matchOrder.staminaDiscount=Effet de l'endurance
+matchOrder.staminaDiscount.title=Les notes de secteur sont accodées selon les contributions de chaque joueur pour chaque secteur
 matchOrder.summary=Résumé
 
 #Skills
@@ -628,6 +635,8 @@ Stamina.abbr=En
 Form=Forme
 Form.abbr=Fo
 
+Loyalty=Fidélité
+Loyalty.abbr=Fi
 MotherClubBonus.abbr=BCO
 
 Status=Statut
@@ -738,6 +747,7 @@ foxtrick.offensiveTrainer=Un %s entraineur qui est offensif.
 foxtrick.balancedTrainer=Un %s entraineur qui est équilibré.
 
 #following string uses pluralForms
+notify.newMail=Vous avez reçu %s nouveau mail. ;Vous avez reçu %s nouveaux mails.
 #following string uses pluralForms
 
 htLive=HT Live
@@ -918,6 +928,8 @@ truthTable.predicted_points=Points prévus
 truthTable.difference=±
 
 # HTMSPoints
+HTMSPoints=Points HTMS\:
+HTMSPoints.AbilityAndPotential=Compétence \: %1 / potentiel \: %2
 
 # CrossTable
 CrossTable.graph=Évolution du classement par journées
@@ -1089,6 +1101,7 @@ about.developers=Développeurs
 about.translators=Traducteurs
 
 prefs.view.by.category=Afficher par catégorie
+prefs.view.by.page=Vu par dernière page HT
 
 prefs.delete_foxtrick_branches_ask=Êtes-vous sûr que vous souhaitez restaurer les paramètres par défaut ?\nFirefox doit être redémarré pour prendre en compte les paramètres\!
 prefs.disable_all_foxtrick_modules_ask=Êtes-vous sûr de vouloir désactiver tous les modules ?\n
