*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9062 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -1111,6 +1111,10 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Deshabilitar temporalmente
+toolbar.featureHighlight=Resaltar características
+toolbar.translationKeys=Mostrar claves de traducción
+toolbar.preferences=Preferencias
 status.active=activo
 status.enabled=habilitado, pero no activo en %s
 status.disabled=inhabilitado
@@ -1168,6 +1172,7 @@ prefs.additional.xmlLoad=Cargar XMLs para información extra desde Hattrick
 prefs.additional.smallCopyIcons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
 prefs.additional.anstoss2Icons=Usar los iconos de Anstoss2 para las especialidades
 prefs.additional.featureHighlight=Resaltar características de FoxTrick
+prefs.additional.translationKeys=Mostrar claves de traducción en lugar de traducciones
 prefs.additional.HTMLDebugLog=Mostrar resultados de la depuración adicional en la página de Hattrick (para desarrolladores)
 
 prefs.feedback.saved=Preferencias Guardadas\!
