--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -81,6 +81,7 @@ foxtrick.ForumYouthIcons.tournament.desc=Ajout de l'icône TournamentID
 foxtrick.ForumYouthIcons.tournament_match.desc=Ajout de l'icône TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Remplace les balises HT-ML FoxTrick par des balises HTML (cf\: élément 'pre').
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Afficher les citations masquées dans un spoiler. Spécifier le niveau ci-dessous.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Détecte les liens vers les fichiers multimédias et les incorpore dans le site. (Expérimental)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Incorporer les vidéos de YouTube
@@ -126,6 +127,7 @@ foxtrick.LinksAchievements.desc=Ajoute des liens externes à la page Réussites.
 foxtrick.LinksStaff.desc=Ajoute des liens externes à la page Spécialistes.
 foxtrick.LinksTracker.desc=Ajoute des liens externes spécifiques aux pages des entraîneurs nationnaux (NT).
 foxtrick.LinksClubTransfers.desc=Ajoute des liens externes à la page Transferts
+foxtrick.LoyaltyDisplay.desc=Mettre en évidence l'effet du bonus de fidélité et du bonus du club sur vos pages de joueur (fonctionne uniquement si l'option « Montrer les barres de caractéristiques » est activée dans les préférences de HT)
 foxtrick.ForumAlterHeaderLine.desc=Modifier les entêtes des messages du forum.
 foxtrick.Singleline2.desc=Affiche les entêtes sur une seule ligne - Alternative 2. Légèrement plus rapide que les autres versions. Prévient certains conflits.
 # please translate next lines again if needed
@@ -158,6 +160,7 @@ foxtrick.ForumNextAndPrevious.desc=Supprime les boutons 'Suivant' et 'Précéden
 foxtrick.ForumLastPost.desc=Afficher le dernier message posté au lieu d'afficher le premier message à lire.
 foxtrick.ForumLastPost.lastpage.desc=Afficher la dernière page au lieu du dernier message posté.
 foxtrick.MatchPlayerColouring.desc=Colorie le nom des joueurs selon leur équipe dans le compte-rendu des matchs.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Ne pas colorier vos joueurs
 foxtrick.MatchReportFormat.desc=Présentation du compte-rendu des matchs ligne par ligne selon les événements du match. Vous pouvez définir les couleurs personnalisées ci-dessous\:
 foxtrick.MatchReportFormat.ShowEventIcons.desc=Ajouter des icônes pour les événements spéciaux (SE)
 foxtrick.ForumRedirManagerToTeam.desc=Redirige les liens du Forum vers la page Général du club au lieu de la page Manager.
@@ -249,7 +252,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Option pour copier un contenu sélectionné e
 foxtrick.ContextMenuCopy.Table.desc=Option pour copier un tableau en HT-ML
 foxtrick.NewMail.desc=Met en surbrillance l'icône HT-mails quand vous recevez de nouveaux mails.
 foxtrick.NewMail.NotifyMail.desc=Afficher une notification s'il y a un nouveau mail
+foxtrick.NewMail.NotifyMailSound.desc=Jouer un son lors d'un nouveau mail
 foxtrick.NewMail.NotifyForum.desc=Afficher une notification si il ya des réponses sur le forum qui vous sont destinées
+foxtrick.NewMail.NotifyForumSound.desc=Jouer un son lors d'une réponse sur le forum vous étant destiné
 foxtrick.CopyYouth.desc=Fonction de copie du rapport de l'équipe de jeunes et du code source de la page
 foxtrick.CopyYouth.TrainingReport.desc=Ajoute un bouton pour copier le rapport d'entraînement des équipes juniors.
 foxtrick.CopyYouth.ScoutComment.desc=Ajoute un bouton pour copier les commentaires du recruteur à la page des détails des joueurs juniors (peut être utilisés dans Hattrick Youth Club)
@@ -319,6 +324,9 @@ foxtrick.TransferCompareSort.desc=Ajoute le tri des résultats des comparaisons 
 foxtrick.ForumStripHattrickLinks.desc=Supprime le serveur des liens internes pour les rendre utilisables dans les forums.
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Pas de confirmation avant le changement des liens.
 foxtrick.RapidId.desc=Ajoute une zone de selection à la page principale pour rechercher par leur identifiant les équipes, les joueurs, etc...
+foxtrick.YouthSeriesEstimation.desc=Dans le tableau des résultats de la recherche, estimation de l'heure de début de la ligue de jeunes lors de l'inter saison.
+foxtrick.ForumThreadAutoIgnore.desc=Ignorer automatiquement les sujets du forum avec les balises sélectionnées (topics with [Tag] or {Tag}).
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Liste des balises séparées par des virgules, par exemple\: NT, idée, Bug.
 foxtrick.LiveAlert.desc=Afficher une notification pour les buts du HTLive
 foxtrick.LiveAlert.Sound.desc=Alerter aussi avec un son
 foxtrick.OldStyleFace.desc=Afficher les visages dans l'ancien style d'Hattrick
@@ -337,6 +345,7 @@ foxtrick.MyMonitor.TeamIcons.desc=Afficher le logo des équipes
 foxtrick.MarkAllAsRead.desc=Un bouton pour marquer tous les sujets dans tous les forums comme lus
 foxtrick.ShowFriendlyBooked.desc=Afficher si une équipe a organisé un match amical dans le classement de la poule
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Afficher les matchs amicaux sur demande
+foxtrick.TickerAlert.desc=Afficher une notification lorsqu'un nouveau ticket est arrivé. Garder le champ de texte vide pour avoir la notification sans le son.
 foxtrick.ShowLineupSet.desc=Mettre en évidence les équipes victorieuses et/ou les équipes qui ont préparées leur composition et/ou les équipes sans manager dans le classement et dans le tableau des résultats de la poule
 foxtrick.ShowLineupSet.LineupSet.desc=Mettre en évidence les équipes qui ont préparé leur composition
 foxtrick.ShowLineupSet.Ownerless.desc=Mettre en évidence les équipes sans manager
@@ -346,8 +355,13 @@ foxtrick.MatchOrderInterface.desc=Réglage de l'interface d'ordre de match
 foxtrick.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
 foxtrick.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
 foxtrick.MatchSimulator.desc=Ajoute un simulateur à l'interface d'ordre de match
+foxtrick.MatchSimulator.RatingsOnTop.desc=Garder les notes de prévision au dessus
 foxtrick.MatchSimulator.RatingsRight.desc=Affiche les prédictions sur la droite
 foxtrick.Filter.desc=Ajoute des filtres à la page des joueurs
+foxtrick.RatingsDisplay.desc=Affiche les notes dans différent style
+foxtrick.RatingsDisplay.DenominationsRange.desc=Dans l'ordre des caractéristiques de 0 à 20
+foxtrick.RatingsDisplay.HatStats.desc=Comme HatStats
+foxtrick.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hattrick pour être moins suspect. Assurez-vous que vous avez désactivez également tous les autres modules qui pourraient vous démasquer, notamment les modules « Alertes ».
 
 # -----------------------------------------------------------------------------
 
@@ -355,6 +369,8 @@ foxtrick.Filter.desc=Ajoute des filtres à la page des joueurs
 # IN-GAME STRINGS. translate first
 
 #Save for work
+foxtrick.SafeForWork.title=Titre
+foxtrick.SafeForWork.icon=Icône
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Image incrustée
@@ -482,6 +498,7 @@ ForumSpecialBBCode.forumSymbol=Inserer "%s"
 ForumSpecialBBCode.symbols=Inserer le symbole\: %s
 
 
+ShowNestedQuotes=Afficher les citations masquées
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Entrez le nom du filtre \:
@@ -539,6 +556,7 @@ matchOrder.options=Options
 matchOrder.staminaDiscount=Effet de l'endurance
 matchOrder.staminaDiscount.title=Les notes de secteur sont accodées selon les contributions de chaque joueur pour chaque secteur
 matchOrder.summary=Résumé
+matchOrder.tournamentMatch=Match de tournoi
 
 #Skills
 Playmaking=Construction
@@ -637,6 +655,7 @@ Form.abbr=Fo
 
 Loyalty=Fidélité
 Loyalty.abbr=Fi
+MotherClubBonus=Bonus du club d'origine
 MotherClubBonus.abbr=BCO
 
 Status=Statut
@@ -749,6 +768,7 @@ foxtrick.balancedTrainer=Un %s entraineur qui est équilibré.
 #following string uses pluralForms
 notify.newMail=Vous avez reçu %s nouveau mail. ;Vous avez reçu %s nouveaux mails.
 #following string uses pluralForms
+notify.newForumMessage=Il y a %s nouvelle réponse sur le forum pour vous. ;Il y a %s nouvelles réponses sur le forum pour vous.
 
 htLive=HT Live
 
@@ -875,6 +895,7 @@ Age.abbr=Âge
 Match=Match
 Series=Poule
 
+TransferCompare=Comparaison de transfert
 TransferCompare.abbr=CT
 Bookmark=Signet
 Bookmark.abbr=Si
@@ -911,6 +932,7 @@ Tournament=Tournoi
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
+foxtrick.SkillTable.showTimeInClub_title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 foxtrick.SkillTable.detach=Détacher
 
 # HTMSPrediction
@@ -926,6 +948,8 @@ truthTable.name=Position actuelle.
 truthTable.real_points=Point actuels
 truthTable.predicted_points=Points prévus
 truthTable.difference=±
+truthTable.notAvailableYet=Données non disponibles pour le moment. Aller sur HTMS pour créer les données nécessaires
+truthTable.tableAtHTMS=Ce tableau sur la page Web de HTMS
 
 # HTMSPoints
 HTMSPoints=Points HTMS\:
@@ -942,8 +966,10 @@ MyMonitor.header=Mon tableau de bord
 #following string uses pluralForms
 MyMonitor.add=Suivre cette équipe
 MyMonitor.remove=Supprimer cette équipe de mon tableau de bord
+MyMonitor.addHelp=Allez sur l'équipe que vous souhaitez surveiller, et vous verrez une fenêtre sur le coté pour ajouter cette équipe.
 MyMonitor.removeTeam=Sélectionnez une équipe a supprimer \:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (%t, \#%i)
 MyMonitor.type.senior=senior
 MyMonitor.type.youth=Jeune
 MyMonitor.type.nt=National
@@ -984,12 +1010,13 @@ showTimeInClub=Afficher l'heure à l'équipe
 sort.up=Vers le haut
 sort.down=Vers le bas
 action.clearCache=Vider le cache
+action.clearCache.title=Effacer le cache Xml de FoxTrick. FoxTrick télécharge au fur et à mesure des informations supplémentaires provenant des serveurs de Hattrick. FoxTrick utilise les données stockées localement jusqu'à ce que vous fermiez votre navigateur. En de rares occasions, ces données peuvnt être erronées. Vider le cache permettra à FoxTrick de télécharger de nouveau les informations supplémentaires.
 
 # fennec ui
 pageAction.rightSidebar=Afficher la barre de droite
 pageAction.mainContent=Afficher le menu principal
 pageAction.leftSidebar=Afficher la barre de gauche
-pageAction.all=Montrer tous
+pageAction.all=Tout Montrer
 
 # buttons
 button.ok=OK
@@ -1017,6 +1044,7 @@ status.unknown=Inconnu
 status.unknown.abbr=?
 
 oauth.authorize=Autoriser FoxTrick a accéder aux données de votre équipe
+oauth.instructions=Un lien vers chpp.hattrick.org apparaîtra sous peu. Ouvrer le lien, entrer votre nom d'utilisateur et votre mot de passe pour obtenir un code d'autorisation puis copier le ci-dessous pour autoriser FoxTrick à accéder à vos données. FoxTrick n'aura pas connaissance de votre mot de passe durant ce  processus.
 oauth.why=Pourquoi devrais-je autoriser FoxTrick ?
 oauth.link=Obtenir le code de vérification de chpp.hattrick.org
 oauth.success=FoxTrick a été autorisé avec succès \! Veuillez recharger cette page pour afficher des informations fournies par FoxTrick.
@@ -1036,18 +1064,24 @@ foxtrick.log.header=Journal de FoxTrick
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Désactiver temporairement
+toolbar.featureHighlight=Mettre en évidence les fonctionnalités
+toolbar.preferences=Préférences
 status.active=activé
 status.enabled=activé, mais sans effet sur %s
 status.disabled=desactivé
 
 prefs.title=Préférences FoxTrick
 
+module.screenshot=Capture d'écran
+module.link=Vous pouvez copier-coller ce lien pour le forum directement ici
 
 # tabs in preferences page
 #tabs
 tab.main=Général
 tab.on_page=Modules sur cette page
 tab.universal=Modules universels
+tab.informationAggregation=Information
 tab.shortcutsAndTweaks=Raccourcis
 tab.presentation=Présentation
 tab.matches=Matchs
@@ -1058,14 +1092,18 @@ tab.about=À propos de
 tab.changes=Changements
 tab.help=Aide
 
+prefs.setup.desc=Ce sont vos paramètres que FoxTrick a détecté. S'ils sont incorrectes, {veuillez signaler}.
 prefs.setup.locale=Choix de la langue
 prefs.setup.dateFormat=Choix du format de date
 prefs.setup.country=Choix du pays
 
 prefs.storedData.title=Sauvegarde des préférences
 prefs.storedData.restoreDefault=Rétablir les paramètres par défaut FoxTrick (redémarrage nécessaire)
+prefs.storedData.oauth.delete=Supprimer OAuth token/secret pour l'équipe sélectionnée.
 # NOTE - please preserve the braces, inner content will be converted to link
+prefs.storedData.oauth.delete.desc=S'applique uniquement à ce navigateur. Pour entièrement révoquer l'accès de FoxTrick à une équipe, utilisez Hattrick {gestion CHPP}.
 prefs.storedData.disableAll=Désactiver tous les modules FoxTrick
+prefs.storedData.revokePermissions=Révoquer toutes les autorisations optionnelles (pour Google Chrome)
 
 prefs.disable.title=Désactiver FoxTrick
 prefs.disable.temporary=Désactiver FoxTrick temporairement
@@ -1075,12 +1113,20 @@ prefs.loadSave.title=Export/Import des préférences
 prefs.loadSave.export=Exporter les Préférences
 prefs.loadSave.export.prefs=Préférences FoxTrick
 prefs.loadSave.export.notes=Paramètres personnels (notes, modèles & liens personnalisés)
+prefs.loadSave.export.token=OAuth token/secret
+prefs.loadSave.export.notice=Copiez le contenu dans la zone de texte et enregistrer le dans un fichier, vous pourrez importer vos préférences à l'avenir.
 prefs.loadSave.import=Importer les Préférences (les préférences actuels seront écrasés. Nécessite un redémarrage)
+prefs.loadSave.import.notice=Collez vos préférences enregistrées dans la zone de texte et cliquez sur "Import" pour importer vos préférences.
 
 prefs.additional.title=Autres options
+prefs.additional.xmlLoad=Charger des fichiers pour des informations supplémentaires de Hattrick
 prefs.additional.smallCopyIcons=Petites icônes pour les copies dans l'en-tête des pages concernées
+prefs.additional.anstoss2Icons=Utilisez les icônes de spécialités d'Anstoss2
+prefs.additional.featureHighlight=Mettre en évidence les fonctionnalités de FoxTrick
 prefs.additional.HTMLDebugLog=Affiche des informations de débogage supplémentaires sur la page Hattrick (pour développeurs)
 
+prefs.feedback.saved=Préférences enregistrées \!
+prefs.feedback.loaded=Préférences chargés \!
 
 link.title=Liens
 link.homepage=Page d'accueil
@@ -1095,6 +1141,7 @@ link.recentChanges=Changements récents
 
 releaseNotes.show=Afficher les Notes de version après chaque mise à jour
 releaseNotes.showFor=Afficher les notes de version pour \:
+releaseNotes.version=Version\:
 
 about.copyright=Droit d'auteur
 about.developers=Développeurs
@@ -1104,8 +1151,10 @@ prefs.view.by.category=Afficher par catégorie
 prefs.view.by.page=Vu par dernière page HT
 
 prefs.delete_foxtrick_branches_ask=Êtes-vous sûr que vous souhaitez restaurer les paramètres par défaut ?\nFirefox doit être redémarré pour prendre en compte les paramètres\!
+prefs.delete_oauth_ask=Supprimer OAuth token/secret pour la TeamID  %s?
 prefs.disable_all_foxtrick_modules_ask=Êtes-vous sûr de vouloir désactiver tous les modules ?\n
 prefs.revoke_permissions_ask=Êtes-vous sûr que vous voulez révoquer toutes les autorisations facultatives ?
 
+prefs.permissionsHint=%s doit obtenir une permission pour fonctionner. Autorisez l'accès dans la boîte de dialogue suivante. Si vous refusez, cette fonction sera désactivée.
 
 ###EOF
