--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -59,9 +59,11 @@ foxtrick.ShowFriendlyBooked.OnDemand.desc=הצג משחקי ידידות אך ו
 foxtrick.TickerAlert.desc=הצג התראה כשיש אירוע חדש בטיקר. הצג חלון התראה ריק בלבד, ללא טקסט וללא צליל.
 foxtrick.ShowLineupSet.desc=הדגש קבוצות שקבעו הרכב למשחק ו/או קבוצות ללא בעלים ו/או קבוצות מובילות בטבלת הליגה ובטבלת המשחקים של הליגה
 foxtrick.ShowLineupSet.LineupSet.desc=הדגש קבוצות שקבעו הרכב למשחק
+foxtrick.MatchOrderInterface.desc=שינויים בדף קביעת ההוראות להרכב.
 foxtrick.MatchOrderInterface.Specialties.desc=הצג התמחויות של שחקנים
 foxtrick.MatchSimulator.desc=הוסף סימולטור (מדמה) משחק לדף קביעת ההוראות למשחק
 foxtrick.MatchSimulator.RatingsRight.desc=הצג תחזית בצד ימין
+foxtrick.RatingsDisplay.desc=מציג רייטינג ממוצע בסגנון שונה
 
 # -----------------------------------------------------------------------------
 
