--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -855,7 +855,7 @@ MatchReportFormat.penaltyShootOut=Izvođenje jedanaesteraca
 MatchReportFormat.result=Rezultat
 
 CopySelected.desc=Kopiraj obilježeno sa ctrl + c.
-SpecialPaste.desc=Zaljepi sa shift + lijevi klik.
+SpecialPaste.desc=Zalijepi sa shift + lijevi klik.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Kopiraj tablicu s vještinama u međuspremnik (HT-ML stil)
@@ -1111,6 +1111,9 @@ foxtrick.log.header=FoxTrick zapisi
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Privremeno isključi
+toolbar.featureHighlight=Označi značajke
+toolbar.preferences=Postavke
 status.active=aktivan
 status.enabled=omogućen, ali neaktivan na %s
 status.disabled=onemogućen
