*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9063 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -334,11 +334,13 @@ foxtrick.NtPeek.desc=Voir les matchs des équipes nationales (NT/U20) sur la pag
 foxtrick.SeriesFlags.Guestbook.desc=Afficher dans le livre d'or
 foxtrick.SeriesFlags.Supporters.desc=Afficher dans la fenêtre des supporters de l'équipe
 foxtrick.SeriesFlags.Visitors.desc=Afficher dans la fenêtre des derniers visiteurs
+foxtrick.SeriesFlags.CountryOnly.desc=Afficher le drapeau du pays sans la division de l'équipe
 foxtrick.HTMSPoints.desc=Affichage des points d'entrainement du joueur déterminé par le tableau de compétences HTMS
 foxtrick.HTMSPoints.AddToPlayer.desc=Affichage sur la page du joueur
 foxtrick.HTMSPoints.AddToSearchResult.desc=Affichage sur la page de résultat de recherche de transfert
 foxtrick.HTMSPoints.AddToPlayerList.desc=Affichage sur la page de la liste des joueurs
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afficher le lien vers l'équipe nationale du joueur international
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Masquer le lien pour répondre dans le livre d'or
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Masquer le Secrétaire s'il n'a rien à signaler
 foxtrick.MyMonitor.desc=Voir les derniers matchs des amis et/ou des adversaires sur la page "mon Hattrick"
 foxtrick.MyMonitor.TeamIcons.desc=Afficher le logo des équipes
@@ -352,10 +354,12 @@ foxtrick.ShowLineupSet.Ownerless.desc=Mettre en évidence les équipes sans mana
 foxtrick.ShowLineupSet.Winning.desc=Mettre en évidence les équipes victorieuses
 foxtrick.MobileEnhancements.desc=Ensemble d'améliorations pour les appareils mobiles
 foxtrick.MatchOrderInterface.desc=Réglage de l'interface d'ordre de match
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Mettre en évidence les joueurs qui ont joué lors du dernier match ainsi que leur position et leur temps de jeu dans la boite de dialogue
 foxtrick.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
 foxtrick.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
 foxtrick.MatchSimulator.desc=Ajoute un simulateur à l'interface d'ordre de match
 foxtrick.MatchSimulator.RatingsOnTop.desc=Garder les notes de prévision au dessus
+foxtrick.MatchSimulator.RatingsBelow.desc=Prédiction ci-dessous
 foxtrick.MatchSimulator.RatingsRight.desc=Affiche les prédictions sur la droite
 foxtrick.Filter.desc=Ajoute des filtres à la page des joueurs
 foxtrick.RatingsDisplay.desc=Affiche les notes dans différent style
@@ -396,6 +400,7 @@ foxtrick.HistoryStats.cupwinner=Vainqueur de la Coupe
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.future=Le joueur peut être promu dans  %1 jours, le %2.;Le joueur peut être promu dans %1 jours, le %2.
 YouthPromotes.today=Le joueur peut être promu aujourd'hui \!
 
 # links
@@ -679,6 +684,7 @@ Last_stars_decline.abbr=Diff
 Last_position=Dernière Position
 Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_played_as_at=A joué %1 minutes en tant que %2 lors de son dernier match le %3.
 Last_match_didnot_play=N'a pas encore joué.
 
 Bruised=Légèrement blessé
@@ -932,6 +938,7 @@ Tournament=Tournoi
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
+foxtrick.SkillTable.Add_homegrown_title=Ajoute tous les joueurs issus du club de l'équipe senior en place
 foxtrick.SkillTable.showTimeInClub_title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 foxtrick.SkillTable.detach=Détacher
 
@@ -964,6 +971,7 @@ CrossTable.noMatches=Personne ne s'est battu.
 # MyMonitor
 MyMonitor.header=Mon tableau de bord
 #following string uses pluralForms
+MyMonitor.teams=%s équipe dans le moniteur;%s équipes dans le moniteur
 MyMonitor.add=Suivre cette équipe
 MyMonitor.remove=Supprimer cette équipe de mon tableau de bord
 MyMonitor.addHelp=Allez sur l'équipe que vous souhaitez surveiller, et vous verrez une fenêtre sur le coté pour ajouter cette équipe.
@@ -1127,6 +1135,7 @@ prefs.additional.HTMLDebugLog=Affiche des informations de débogage supplémenta
 
 prefs.feedback.saved=Préférences enregistrées \!
 prefs.feedback.loaded=Préférences chargés \!
+prefs.feedback.dismiss=(cliquez pour faire disparaitre cette note)
 
 link.title=Liens
 link.homepage=Page d'accueil
@@ -1144,8 +1153,10 @@ releaseNotes.showFor=Afficher les notes de version pour \:
 releaseNotes.version=Version\:
 
 about.copyright=Droit d'auteur
+about.maintainers=Chefs de projet
 about.developers=Développeurs
 about.translators=Traducteurs
+about.designers=Designers
 
 prefs.view.by.category=Afficher par catégorie
 prefs.view.by.page=Vu par dernière page HT
