--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -46,6 +46,7 @@ foxtrick.TeamPopupLinks.Matches.desc=משחקים
 foxtrick.TeamPopupLinks.Players.desc=﻿שחקנים
 foxtrick.TeamPopupLinks.Guestbook.desc=﻿ספר אורחים
 foxtrick.TeamPopupLinks.TransferHistory.desc=היסטורית העברות
+foxtrick.TeamPopupLinks.TeamHistory.desc=היסטורית המועדון
 foxtrick.TeamPopupLinks.LastLineup.desc=הרכב אחרון
 foxtrick.TeamPopupLinks.Coach.desc=מאמן
 foxtrick.TeamPopupLinks.CustomLink.desc=קישורים מותאמים אישית בשורות נפרדות. התגיות UserID] ו-[TeamID] יוחלפו על ידי המספרים הרלבנטיים. דוגמא\: {"link"\:"http\://example.com/[teamid]", "title"\:"לינק לדוגמא", "more"\: false, "newTab"\:true}
