*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9066 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -92,31 +92,31 @@ foxtrick.CopyPostID.desc=Giv et link til at kopiere et indlægs ID
 foxtrick.CopyPosting.desc=Tilføj ikon for at kopiere indlægget inkl. henvisninger
 foxtrick.ShowForumPrefButton.desc=Link til forum indstillinger på forum sider
 foxtrick.Links.desc=Grundlæggende modul afgørende for andre link moduler til at fungere ordentligt.
-foxtrick.LinksLeague.desc=Tilføjer nogle eksterne links til liga siden
-foxtrick.LinksTeam.desc=Tilføjer nogle eksterne links til hold siden
-foxtrick.LinksCountry.desc=﻿Tilføjer nogle eksterne links til land siden
-foxtrick.LinksChallenges.desc=﻿Tilføjer nogle eksterne links til siden udfordringer
-foxtrick.LinksEconomy.desc=﻿Tilføjer nogle eksterne links til økonomi siden
-foxtrick.LinksYouthOverview.desc=﻿Tilføjer nogle eksterne links til Ungdomoversigts siden
-foxtrick.LinksYouthTraining.desc=﻿Tilføjer nogle eksterne links til ungdomtrænings siden
-foxtrick.LinksYouthPlayerDetail.desc=﻿Tilføjer nogle eksterne links til undgomspiller detalje siden
-foxtrick.LinksYouthPlayerList.desc=﻿Tilføjer nogle eksterne links til ungdomspiller siden
-foxtrick.LinksYouthMatchList.desc=﻿Tilføjer nogle eksterne links til siden ungdoms kampe
-foxtrick.LinksYouthLeague.desc=﻿Tilføjer nogle eksterne links til ungdomsliga siden
-foxtrick.LinksArena.desc=﻿Tilføjer nogle eksterne links til Stadion siden
-foxtrick.LinksCoach.desc=﻿Tilføjer nogle eksterne links på ny træner siden
-foxtrick.LinksPlayerDetail.desc=﻿Tilføjer nogle eksterne links til spiller detalje siden
-foxtrick.LinksMatch.desc=﻿Tilføjer nogle eksterne links til kamp siden
-foxtrick.LinksTraining.desc=﻿Tilføjer nogle eksterne links til trænings siden
-foxtrick.LinksAlliances.desc=Tilføjer nogle eksterne links til forbunds side
-foxtrick.LinksNational.desc=Tilføjer nogle eksterne links til landsholds siden
-foxtrick.LinksFans.desc=Tilføjer nogle eksterne links til fans siden
-foxtrick.LinksPlayers.desc=Tilføjer nogle eksterne links til spiller siden
-foxtrick.LinksManager.desc=Tilføjer nogle eksterne links til manager side
-foxtrick.LinksAchievements.desc=Tilføjer nogle eksterne links til bedrifts siden
-foxtrick.LinksStaff.desc=Tilføjer nogle eksterne links til personale siden
-foxtrick.LinksTracker.desc=Tilføjer nogle eksterne tracker links til de tilsvarende landsholds og spiller sider
-foxtrick.LinksClubTransfers.desc=Tilføjer nogle eksterne links til klub transfer siden
+foxtrick.LinksLeague.desc=Tilføjer eksterne links til liga siden
+foxtrick.LinksTeam.desc=Tilføjer eksterne links til hold siden
+foxtrick.LinksCountry.desc=﻿Tilføjer eksterne links til land siden
+foxtrick.LinksChallenges.desc=﻿Tilføjer eksterne links til siden udfordringer
+foxtrick.LinksEconomy.desc=﻿Tilføjer eksterne links til økonomi siden
+foxtrick.LinksYouthOverview.desc=﻿Tilføjer eksterne links til Ungdomoversigts siden
+foxtrick.LinksYouthTraining.desc=﻿Tilføjer eksterne links til ungdomtrænings siden
+foxtrick.LinksYouthPlayerDetail.desc=﻿Tilføjer eksterne links til undgomspiller detalje siden
+foxtrick.LinksYouthPlayerList.desc=﻿Tilføjer eksterne links til ungdomspiller siden
+foxtrick.LinksYouthMatchList.desc=﻿Tilføjer eksterne links til siden ungdoms kampe
+foxtrick.LinksYouthLeague.desc=﻿Tilføjer eksterne links til ungdomsliga siden
+foxtrick.LinksArena.desc=﻿Tilføjer eksterne links til Stadion siden
+foxtrick.LinksCoach.desc=﻿Tilføjer eksterne links på ny træner siden
+foxtrick.LinksPlayerDetail.desc=﻿Tilføjer eksterne links til spiller detalje siden
+foxtrick.LinksMatch.desc=﻿Tilføjer eksterne links til kamp siden
+foxtrick.LinksTraining.desc=﻿Tilføjer eksterne links til trænings siden
+foxtrick.LinksAlliances.desc=Tilføjer eksterne links til forbunds side
+foxtrick.LinksNational.desc=Tilføjer eksterne links til landsholds siden
+foxtrick.LinksFans.desc=Tilføjer eksterne links til fans siden
+foxtrick.LinksPlayers.desc=Tilføjer eksterne links til spiller siden
+foxtrick.LinksManager.desc=Tilføjer eksterne links til manager side
+foxtrick.LinksAchievements.desc=Tilføjer eksterne links til bedrifts siden
+foxtrick.LinksStaff.desc=Tilføjer eksterne links til personale siden
+foxtrick.LinksTracker.desc=Tilføjer eksterne tracker links til de tilsvarende landsholds og spiller sider
+foxtrick.LinksClubTransfers.desc=Tilføjer eksterne links til klub transfer siden
 foxtrick.ForumAlterHeaderLine.desc=Ændrer overskrift linjen på indlæg
 foxtrick.Singleline2.desc=Alternativt Forum overskrift enkelt linie modul. Lidt hurtigere end de andre versioner. Deaktiverer nogle modstridende ændrings moduler ved forumindlæg.
 # please translate next lines again if needed
@@ -204,7 +204,16 @@ foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Fjerner bruger serie fra
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Viser altid indholdet af spoilere
 foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Vis antallet af nye indlæg i parentes efter total indlæg
 foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Vis ikoner i stedet for teksthyperlinks i forum indlæg
+foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Retter fejlagtigt placerede bruger info hvis indlægsoverskriften bliver overfyldt
+foxtrick.CurrencyConverter.desc=Konvertere en HT valuta
+foxtrick.MovePlayerStatement.desc=Flytter spiller udtalelser ved siden af spiller billedet. Hvis billeder er deaktiveret, fjernes udtalelser.
+foxtrick.TickerColoring.desc=De forskellige hændelser der vises ved nyheds ticker vil være farvet.
 #ExtraShortcuts
+foxtrick.ExtraShortcuts.desc=Tilføj genveje til de vigtigste genveje
+foxtrick.ExtraShortcuts.AddLeft.desc=Markere, for at tilføje ikonet til venstre, Fjern markeringen for at tilføje dem til højre
+foxtrick.ExtraShortcuts.AddSpace.desc=Forøge mellemrum for genvejsikoner
+foxtrick.ExtraShortcuts.Supporterstats.desc=Link til supporter statistik
+foxtrick.ExtraShortcuts.Transfers.desc=Link til transfer side af eget hold
 foxtrick.ExtraShortcuts.Prefs.desc=Link til Indstillings side
 foxtrick.ExtraShortcuts.ManageCHPP.desc=Link til CHPP indstillings side
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link til FoxTrick indstillings side
@@ -213,7 +222,14 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
+foxtrick.HeaderFix.desc=Fastholder overskriften mens du ruller (påvirker også på andre sider af HT)
+foxtrick.HeaderFix.FixLeft.desc=Fastholder også undermenuen mens du ruller
+foxtrick.CopyRatings.desc=Tilføj links til ratings tabel på kamp rapport side for kopiering af ratings (i HT-ML)
+foxtrick.GoalDifferenceToTables.desc=Tilføjer en ekstra kolonne til mål forskellen på opryknings tabel samt på gamle serie tabeller
+foxtrick.ElectionTable.desc=Tilføjer procentdel til valg tabellen (kun viste stemmer tælles, ikke alle)
+foxtrick.ContextMenuCopy.desc=Muligheder på genvejsmenuen for kopiering af ID og/eller hyperlink og indhold i HT-ML
 foxtrick.ContextMenuCopy.Id.desc=Mulighed for kopiering af ID
+foxtrick.ContextMenuCopy.Link.desc=Mulighed for kopiering af link placering i HT-ML
 foxtrick.CopyYouth.TrainingReport.desc=Trænings rapport
 foxtrick.CopyYouth.ScoutComment.desc=Spejder kommentar
 foxtrick.CopyYouth.PlayerSource.desc=Spiller kildekode
