--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -36,6 +36,7 @@ foxtrick.SeniorTeamShortCuts.AllPages.desc=הצג בכל הדפים
 #ExtraShortcuts
 #CopyMatchID
 foxtrick.CopyMatchID.desc=לחיצה על הסמל תעתיק את מספר המשחק במסגרת ליגה/גביע/ידידות/טורניר בדף המשחקים או בארכיון המשחקים. יעבוד עבור תומכים גם בדף ה-"ראש בראש" (בלשוניות "משחקים אחרונים" ו"היסטוריה")
+foxtrick.CopyYouth.TrainingReport.desc=דו"ח אימונים
 foxtrick.SeasonStats.desc=הצגת סטטיסטיקה מסוימת בדפי ארכיון המשחקים
 foxtrick.LeagueNewsFilter.desc=מסנן המציג חדשות ליגה מסוג מסוים
 foxtrick.LeagueNewsFilter.all.desc=הצג את כל החדשות
@@ -48,6 +49,7 @@ foxtrick.TeamPopupLinks.Guestbook.desc=﻿ספר אורחים
 foxtrick.TeamPopupLinks.TransferHistory.desc=היסטורית העברות
 foxtrick.TeamPopupLinks.TeamHistory.desc=היסטורית המועדון
 foxtrick.TeamPopupLinks.LastLineup.desc=הרכב אחרון
+foxtrick.TeamPopupLinks.NextMatch.desc=המשחק הבא
 foxtrick.TeamPopupLinks.Coach.desc=מאמן
 foxtrick.TeamPopupLinks.CustomLink.desc=קישורים מותאמים אישית בשורות נפרדות. התגיות UserID] ו-[TeamID] יוחלפו על ידי המספרים הרלבנטיים. דוגמא\: {"link"\:"http\://example.com/[teamid]", "title"\:"לינק לדוגמא", "more"\: false, "newTab"\:true}
 #YouthSkillHideUnknown
@@ -115,6 +117,7 @@ foxtrick.TeamStats.Pictures.label=פנים
 foxtrick.TeamStats.PlayedLatest.label=שיחק במשחק האחרון
 foxtrick.TeamStats.NotTransferListed.label=לא הוצב למכירה
 foxtrick.TeamStats.ActivePlayers.label=שחקנים פעילים
+foxtrick.TeamStats.HomeGrownPlayers.label=מועדון אם
 foxtrick.TeamStats.PurchasedPlayers.label=שחקנים שנרכשו
 foxtrick.TeamStats.FilterFor=סנן לפי
 
@@ -217,6 +220,7 @@ Filters.Form=כושר משחק
 Filters.XP=ניסיון
 Filters.specialty=התמחות
 Filters.stars=כוכבים
+Filters.addFilterOptions=בחר אפשרויות לסינון
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -345,6 +349,7 @@ Form.abbr=כ"מ
 
 Loyalty=נאמנות
 Loyalty.abbr=נא
+MotherClubBonus=תוספת מועדון אם
 
 
 Yellow_card=כרטיס צהוב
@@ -394,6 +399,7 @@ Hotlist=רשימה חמה
 Hotlist.abbr=ברשימה החמה
 
 skilltable.youthplayer=שחקן נוער
+skilltable.rebought_youthplayer=שחקן נוער שנמכר ונקנה מחדש
 
 #matchdetail
 foxtrick.matchdetail.midfield=קישור
@@ -644,6 +650,7 @@ MyMonitor.type.youth=נוער
 MyMonitor.type.nt=נבחרת
 
 # MarkAllAsRead
+MarkAllAsRead.title=סמן דיונים בכל הפורמים כנקראו
 
 # TickerAlert
 TickerAlert.enable=אפשר
