--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -1113,6 +1113,7 @@ foxtrick.log.header=FoxTrick zapisi
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Privremeno isključi
 toolbar.featureHighlight=Označi značajke
+toolbar.translationKeys=Pokaži prevoditeljske tipke
 toolbar.preferences=Postavke
 status.active=aktivan
 status.enabled=omogućen, ali neaktivan na %s
@@ -1171,6 +1172,7 @@ prefs.additional.xmlLoad=Učitaj XMLs za dodatne informacije od Hattricka
 prefs.additional.smallCopyIcons=Prikazati male ikonice za kopiranje u zaglavlje umjesto u zaseban izbornik sa strane
 prefs.additional.anstoss2Icons=Koristi Anstoss2 ikone za specijalnosti
 prefs.additional.featureHighlight=Istakni Foxtrickove značajke
+prefs.additional.translationKeys=Pokaži prevoditeljske tipke umjesto prijevoda
 prefs.additional.HTMLDebugLog=Prikazati dodatni 'debug izlaz' u podnožju stranice (samo za programere)
 
 prefs.feedback.saved=Postavke spremljene\!
