--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -1,6 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
-properties.translators=Développeurs
+properties.translators=davidatorus (9100817)
 
 # Hints:
 # translate the right side of the = sign.
@@ -74,6 +74,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Lien vers un match junior
 foxtrick.ForumYouthIcons.youth_series.desc=Lien vers une ligue junior
 foxtrick.ForumYouthIcons.enlarge_input.desc=Agrandit la zone de saisie.
 foxtrick.ForumYouthIcons.pre.desc=Lien vers une balise de texte pré-formatté ('pre').
+foxtrick.ForumYouthIcons.table.desc=Ajout d'un ivône pour faire un tableau. La balise personnalisée accepte les expressions régulières (ponctuation, par exemple.)
 foxtrick.ForumYouthIcons.symbols.desc=Ajout des icône de symboles ci-dessous. Les symboles sont séparées par des points-virgules. Pour utiliser un point-virgule entrez "/;".
 foxtrick.ForumYouthIcons.debug.desc=Ajout d'un icône pour le journal de débogage de FoxTrick
 foxtrick.ForumYouthIcons.settings.desc=Ajout d'un icône pour les paramètres de FoxTrick
@@ -163,6 +164,7 @@ foxtrick.MatchPlayerColouring.desc=Colorie le nom des joueurs selon leur équipe
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Ne pas colorier vos joueurs
 foxtrick.MatchReportFormat.desc=Présentation du compte-rendu des matchs ligne par ligne selon les événements du match. Vous pouvez définir les couleurs personnalisées ci-dessous\:
 foxtrick.MatchReportFormat.ShowEventIcons.desc=Ajouter des icônes pour les événements spéciaux (SE)
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Ne pas surligner votre équipe
 foxtrick.ForumRedirManagerToTeam.desc=Redirige les liens du Forum vers la page Général du club au lieu de la page Manager.
 foxtrick.ManagerButtons.desc=Ajouter ou modifier les icônes de gestion sur les pages de manager et d'équipe
 foxtrick.ManagerButtons.GuestBook.desc=Ajout d'un lien pour écrire dans le livre d'or dans les pages de manager et d'équipe
@@ -206,6 +208,8 @@ foxtrick.FixcssProblems.Page_Minimum_Height.desc=Sauts de page quand aucune barr
 foxtrick.FixcssProblems.RTL_Fixes.desc=Résout certaines erreurs HT pour les langues s'écrivant de droite à gauche
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Ajoute une barre fixe de défilement au forum (moins de scintillement que l'option HT)
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Taille de la police des notes sur la page des rapports de matchs
+foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Supprimer 'Forum sneak-peek' de toutes les pages.
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Hauteur minimum automatique du calendrier afin de réduire les espaces.
 foxtrick.SimplePresentation.desc=Options de présentation supplémentaire.
 foxtrick.SimplePresentation.League_Table.desc=Ajoute des lignes verticales dans le tableau des ligues afin de faciliter la lecture
 foxtrick.SimplePresentation.Guestbook.desc=Améliore la lisibilité du livre d'or (affiche les messages sur fond gris)
@@ -260,6 +264,7 @@ foxtrick.CopyYouth.TrainingReport.desc=Ajoute un bouton pour copier le rapport d
 foxtrick.CopyYouth.ScoutComment.desc=Ajoute un bouton pour copier les commentaires du recruteur à la page des détails des joueurs juniors (peut être utilisés dans Hattrick Youth Club)
 foxtrick.CopyYouth.RejectedToHTY.desc=Copiez le commentaire de l'entraineur et ouvrir HT-Youthclub lors du rejet de joueur
 foxtrick.CopyYouth.PlayerSource.desc=Ajoute un bouton pour copier les informations du joueur à la page des détails des joueurs juniors (peut être utilisés dans Hattrick Youth Club)
+foxtrick.CopyYouth.FixturesSource.desc=Code source du calendrier des matchs
 foxtrick.PlayerBirthday.desc=Ajoute les anniversaires passés et à venir à la page des détails des joueurs.
 foxtrick.MovePlayerSelectbox.desc=Déplace vers le haut la liste déroulante des compte-rendus sur la page des détails des joueurs.
 foxtrick.SeasonStats.desc=Affiche une synthèse de la saison sur la page d'archive des matchs.
@@ -288,6 +293,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=Prochain match
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Ajouter le prochain match à HT-Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Matchs équipe junior
 foxtrick.TeamPopupLinks.Coach.desc=Entraineur
+foxtrick.TeamPopupLinks.CustomLink.desc=Liens personnalisés \: Les balises [UserID] et [TeamID] seront remplacées par l'ID réel. Exemple\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 foxtrick.SkillColoring.desc=Meilleure visualisation des compétences
 foxtrick.SkillColoring.skill_color.desc=Colorie les compétences
 foxtrick.SkillColoring.only_skill_color.desc=Ne Colorie pas les caractéristiques des joueurs (Agréabilité, Honnêteté, Agressivité, etc...)
@@ -325,12 +331,16 @@ foxtrick.ForumStripHattrickLinks.desc=Supprime le serveur des liens internes pou
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Pas de confirmation avant le changement des liens.
 foxtrick.RapidId.desc=Ajoute une zone de selection à la page principale pour rechercher par leur identifiant les équipes, les joueurs, etc...
 foxtrick.YouthSeriesEstimation.desc=Dans le tableau des résultats de la recherche, estimation de l'heure de début de la ligue de jeunes lors de l'inter saison.
+foxtrick.LocalTime.desc=Optionnellement voir l'heure du fuseau horaire local à la place de l'heure d'Hattrick
 foxtrick.ForumThreadAutoIgnore.desc=Ignorer automatiquement les sujets du forum avec les balises sélectionnées (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Liste des balises séparées par des virgules, par exemple\: NT, idée, Bug.
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Liste blanche des sujets du forum via leur ID (la partie avant le point). Ces sujets ne seront pas ignorés, séparés les par des virgules.
+foxtrick.TableSort.desc=Donne des options de tri pour tous les tableaux qui ont un en-tête (y compris les tableaux dans les messages du forum)
 foxtrick.LiveAlert.desc=Afficher une notification pour les buts du HTLive
 foxtrick.LiveAlert.Sound.desc=Alerter aussi avec un son
 foxtrick.OldStyleFace.desc=Afficher les visages dans l'ancien style d'Hattrick
 foxtrick.NtPeek.desc=Voir les matchs des équipes nationales (NT/U20) sur la page du pays et sur "Mon Hattrick"
+foxtrick.SeriesFlags.desc=Voir la division et le drapeau à coté du lien de l'utilisateur
 foxtrick.SeriesFlags.Guestbook.desc=Afficher dans le livre d'or
 foxtrick.SeriesFlags.Supporters.desc=Afficher dans la fenêtre des supporters de l'équipe
 foxtrick.SeriesFlags.Visitors.desc=Afficher dans la fenêtre des derniers visiteurs
@@ -339,6 +349,9 @@ foxtrick.HTMSPoints.desc=Affichage des points d'entrainement du joueur détermin
 foxtrick.HTMSPoints.AddToPlayer.desc=Affichage sur la page du joueur
 foxtrick.HTMSPoints.AddToSearchResult.desc=Affichage sur la page de résultat de recherche de transfert
 foxtrick.HTMSPoints.AddToPlayerList.desc=Affichage sur la page de la liste des joueurs
+foxtrick.TableOfStatisticalTruth.desc=Prévision statistique du classement final (seulement pour les saisons terminées).
+foxtrick.FriendlyInterface.desc=Réglage pour fournir une interface plus conviviale
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Montrer les noms complets des joueurs dans la page des compositions d'équipe
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afficher le lien vers l'équipe nationale du joueur international
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Masquer le lien pour répondre dans le livre d'or
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Masquer le Secrétaire s'il n'a rien à signaler
@@ -356,11 +369,13 @@ foxtrick.MobileEnhancements.desc=Ensemble d'améliorations pour les appareils mo
 foxtrick.MatchOrderInterface.desc=Réglage de l'interface d'ordre de match
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Mettre en évidence les joueurs qui ont joué lors du dernier match ainsi que leur position et leur temps de jeu dans la boite de dialogue
 foxtrick.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
+foxtrick.MatchOrderInterface.StayOnPage.desc=Rester sur la page d'ordre de match après avoir sauvegardé
 foxtrick.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
 foxtrick.MatchSimulator.desc=Ajoute un simulateur à l'interface d'ordre de match
 foxtrick.MatchSimulator.RatingsOnTop.desc=Garder les notes de prévision au dessus
 foxtrick.MatchSimulator.RatingsBelow.desc=Prédiction ci-dessous
 foxtrick.MatchSimulator.RatingsRight.desc=Affiche les prédictions sur la droite
+foxtrick.HeaderToggle.desc=Cliquer sur h2-headers permet de basculer entre montrer et cacher la section suivante. Il se souvient de la dernière configuration personnelle basé sur le type et l'en-tête de la page
 foxtrick.Filter.desc=Ajoute des filtres à la page des joueurs
 foxtrick.RatingsDisplay.desc=Affiche les notes dans différent style
 foxtrick.RatingsDisplay.DenominationsRange.desc=Dans l'ordre des caractéristiques de 0 à 20
@@ -397,6 +412,7 @@ foxtrick.HistoryStats.pos=Rang
 foxtrick.HistoryStats.pos.short=P
 foxtrick.HistoryStats.label=Synthèse
 foxtrick.HistoryStats.cupwinner=Vainqueur de la Coupe
+foxtrick.HistoryStats.cupwinner.short=VC
 
 # YouthPromotes
 #following string uses pluralForms
@@ -416,7 +432,9 @@ foxtrick.TeamStats.TransferListed.label=Sur la liste des transferts
 foxtrick.TeamStats.Pictures.label=Photos
 foxtrick.TeamStats.PlayedLatest.label=A joué pendant le dernier match
 foxtrick.TeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
-foxtrick.TeamStats.HomeGrownPlayers.label=Joueurs de production locale
+foxtrick.TeamStats.NotTransferListed.label=Non transférable
+foxtrick.TeamStats.ActivePlayers.label=Joueurs actifs
+foxtrick.TeamStats.HomeGrownPlayers.label=Joueurs issus du club
 foxtrick.TeamStats.PurchasedPlayers.label=Joueurs achetés
 foxtrick.TeamStats.FilterFor=Filtre pour
 
@@ -483,6 +501,8 @@ ForumYouthIcons.youthplayerid=Insérer un lien vers un joueur
 ForumYouthIcons.youthteamid=Insérer un lien vers une équipe
 ForumYouthIcons.youthmatchid=Insérer un lien vers un match
 ForumYouthIcons.youthseries=Insérer un lien vers une ligue
+ForumYouthIcons.tournamentid=Incorporer la balise du tournoi.
+ForumYouthIcons.tournamentmatchid=Incorporer la balise "match du tournoi".
 
 ForumOtherIcons.label=Autres
 ForumOtherIcons.debug=Insérez le journal de débogage de FoxTrick.
@@ -497,6 +517,7 @@ ForumSpecialBBCode.article=Insérer un lien vers un article Hattrick Press
 ForumSpecialBBCode.clock=Insérer un horodatage
 ForumSpecialBBCode.spoiler=Insérer un texte caché (spoiler)
 ForumSpecialBBCode.pre=Insérer une balise de texte pré-formatté ('pre')
+ForumSpecialBBCode.table=Insérer un tableau grâce aux balises, convertir le texte sélectionné dans un tableau (les lignes sont convertis en lignes. Le texte séparé par des "%s" est convertie en cellules.)
 ForumSpecialBBCode.tableSeparator=Convertir "%s" en cellules
 ForumSpecialBBCode.enterSeparator=Entrez un séparateur personnalisé
 ForumSpecialBBCode.forumSymbol=Inserer "%s"
@@ -603,16 +624,23 @@ categories.E2=E2
 match.pos.kp=Gardien
 match.pos.kp.abbr=GB
 match.pos.lb=Arrière gauche
+match.pos.lb.abbr=AG
 match.pos.lcd=Défenseur central gauche
+match.pos.lcd.abbr=DCG
 match.pos.mcd=Milieu défenseur central
+match.pos.mcd.abbr=DC
 match.pos.rcd=Défenseur central droit
+match.pos.rcd.abbr=DCD
 match.pos.rb=Arrière droit
 match.pos.rb.abbr=ARD
 match.pos.lw=Ailier gauche
 match.pos.lw.abbr=ALG
 match.pos.lcm=Milieu de terrain gauche
+match.pos.lcm.abbr=MCG
 match.pos.mcm=Milieu de terrain centre
+match.pos.mcm.abbr=MC
 match.pos.rcm=Milieu de terrain central droit
+match.pos.rcm.abbr=MCD
 match.pos.rw=Ailier droit
 match.pos.rw.abbr=ALD
 match.pos.lf=Attaquant Gauche
@@ -723,6 +751,7 @@ Hotlist=Les hors classe
 Hotlist.abbr=Hors classe
 
 skilltable.youthplayer=Junior
+skilltable.rebought_youthplayer=Jeune joueur racheté
 
 #matchdetail
 foxtrick.matchdetail.midfield=Milieu
@@ -809,6 +838,8 @@ CopyYouth.scoutComment=Copiez le commentaire du recruteur
 CopyYouth.scoutComment.copied=Le commentaire de recruteur a été copié
 CopyYouth.playerSource=Copier le code source du joueur
 CopyYouth.playerSource.copied=Le code source du joueur a été copié
+CopyYouth.fixturesSource=Copier le code source du calendrier des matchs
+CopyYouth.fixturesSource.copied=Le code source du calendrier a été copié.
 CopyYouth.goto=Aller à %s
 
 MatchReportFormat.MatchReport=Résumé du Match
@@ -817,6 +848,7 @@ MatchReportFormat.kickOff=Coup d'envoi
 MatchReportFormat.halfTime=Mi-temps
 MatchReportFormat.fullTime=Fin de Match
 MatchReportFormat.extraTime=Prolongation
+MatchReportFormat.penaltyShootOut=Tirs au but
 MatchReportFormat.result=Score final
 
 CopySelected.desc=Copier la sélection avec Ctrl + c
@@ -837,7 +869,7 @@ foxtrick.matches.left=Gauche
 foxtrick.matches.center=Centre
 foxtrick.matches.defense=déf
 foxtrick.matches.attack=att
-foxtrick.matches.indfreekick=Coup franc ind.
+foxtrick.matches.indfreekick=Coup franc indirect
 foxtrick.matches.wronglang=FoxTrick\: Les statistiques ne peuvent pas être affichés parce que votre langue n'est pas enregistrée ou parce que vous avez défini la mauvaise langue dans les préférences
 
 
@@ -937,7 +969,7 @@ Tournaments=Tournois
 Tournament=Tournoi
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
+foxtrick.SkillTable.Switch_view_title=Trier l'affichage du tableau.
 foxtrick.SkillTable.Add_homegrown_title=Ajoute tous les joueurs issus du club de l'équipe senior en place
 foxtrick.SkillTable.showTimeInClub_title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 foxtrick.SkillTable.detach=Détacher
@@ -950,8 +982,10 @@ HTMSPrediction.changePrediction=Change prediction
 HTMSPrediction.team=Équipe
 
 #htms table of statistical truth
+truthTable.table=Tableau de statistique HTMS
 truthTable.predicted_position=\#
-truthTable.name=Position actuelle.
+truthTable.name=Équipe
+truthTable.real_position=Position actuelle
 truthTable.real_points=Point actuels
 truthTable.predicted_points=Points prévus
 truthTable.difference=±
@@ -966,6 +1000,7 @@ HTMSPoints.AbilityAndPotential=Compétence \: %1 / potentiel \: %2
 CrossTable.graph=Évolution du classement par journées
 CrossTable.table=Résultats croisés
 # will be shown as "R13" denoting round 13
+CrossTable.round=T%s
 CrossTable.noMatches=Personne ne s'est battu.
 
 # MyMonitor
@@ -975,7 +1010,7 @@ MyMonitor.teams=%s équipe dans le moniteur;%s équipes dans le moniteur
 MyMonitor.add=Suivre cette équipe
 MyMonitor.remove=Supprimer cette équipe de mon tableau de bord
 MyMonitor.addHelp=Allez sur l'équipe que vous souhaitez surveiller, et vous verrez une fenêtre sur le coté pour ajouter cette équipe.
-MyMonitor.removeTeam=Sélectionnez une équipe a supprimer \:
+MyMonitor.removeTeam=Sélectionnez une équipe à supprimer \:
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.removeTeamFormat=%n (%t, \#%i)
 MyMonitor.type.senior=senior
@@ -986,27 +1021,28 @@ MyMonitor.type.nt=National
 MarkAllAsRead.title=Marquer les fils de toutes les tribunes comme lus
 
 # TickerAlert
-TickerAlert.enable=Permettre
+TickerAlert.enable=Activer
 TickerAlert.sound=Son
 
 # tickers
 ticker.type.welcome=Salutation
-ticker.type.supporter=Connexion d'équipe soutenu
-ticker.type.forum=Réponses de tribune
+ticker.type.supporter=Connexion d'équipe supportée
+ticker.type.forum=Réponses du forum
 ticker.type.transfer=Info de tranfert
 ticker.type.challenge=Défi
 ticker.type.guestbook=Livre d'or
 ticker.type.mail=HT-Mail
-ticker.type.myht=Mon message de coup de chapeau
+ticker.type.myht=Mes messages de Hattrick
 ticker.type.others=Autres
 
 # LocalTime
-LocalTime.hattrick=Temps de coup de chapeau
-LocalTime.hattrick.title=Heure dans le fuseau horaire de coup de chapeau. Cliquez sur l'horloge pour passer à l'heure locale.
+LocalTime.hattrick=Heure d'Hattrick
+LocalTime.hattrick.title=Heure d'Hattrick. Cliquez sur l'horloge pour passer à l'heure locale.
 LocalTime.local=Heure locale
 LocalTime.local.title=Heure du fuseau horaire local. Cliquez sur l'horloge pour passer à l'heure d'Hattrick.
 
 # Links
+Links.feeds=Listes des liens vers un flux (séparés par des sauts de ligne)
 
 #actions
 Copy=Copier
@@ -1014,7 +1050,7 @@ View=Voir
 Switch_view=Changer de vue
 Detach=Détacher
 AddHomegrown=Ajouter les joueurs locaux
-showTimeInClub=Afficher l'heure à l'équipe
+showTimeInClub=Afficher l'heure du l'équipe
 sort.up=Vers le haut
 sort.down=Vers le bas
 action.clearCache=Vider le cache
@@ -1100,6 +1136,7 @@ tab.about=À propos de
 tab.changes=Changements
 tab.help=Aide
 
+prefs.setup=Configuration
 prefs.setup.desc=Ce sont vos paramètres que FoxTrick a détecté. S'ils sont incorrectes, {veuillez signaler}.
 prefs.setup.locale=Choix de la langue
 prefs.setup.dateFormat=Choix du format de date
